--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "angular-mocks": "^1.3.14",
     "browserify": "^8.1.3",
     "browserify-shim": "^3.8.3",
+    "connect-livereload": "^0.5.3",
     "gulp": "^3.8.11",
     "gulp-browserify": "^0.5.1",
+    "gulp-concat": "^2.5.2",
     "gulp-jasmine": "^2.0.0",
     "gulp-jshint": "^1.9.2",
     "gulp-livereload": "^3.7.0",
     "gulp-load-plugins": "^0.8.0",
+    "gulp-ng-annotate": "^0.5.2",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.4",
     "jasmine-core": "^2.2.0",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.31",
@@ -41,14 +46,14 @@
     "angular-bootstrap": "^0.12.0",
     "angular-route": "^1.3.12",
     "angular-sanitize": "^1.3.12",
+    "body-parser": "^1.12.0",
     "bootstrap": "^3.3.2",
     "browserify": "^8.1.3",
+    "cookie-parser": "^1.3.4",
     "express": "^4.11.2",
     "jquery": "^2.1.3",
-    "moment": "^2.9.0",
-    "body-parser": "^1.12.0",
-    "cookie-parser": "^1.3.4",
     "lodash": "^3.2.0",
+    "moment": "^2.9.0",
     "morgan": "^1.5.1"
   },
   "browserify": {
