Updated application to work with babel, fixed gulp and test

--- a/.jshintrc
+++ b/.jshintrc
@@ -27,8 +27,9 @@
   "asi": false,
   "boss": false,
   "debug": false,
+  "devel": true,
   "eqnull": true,
-  "esnext": false,
+  "esnext": true,
   "evil": false,
   "expr": false,
   "funcscope": false,
