--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browserify-shim": "^3.8.3",
     "connect-livereload": "^0.5.3",
     "gulp": "^3.8.11",
+    "gulp-babel": "^5.1.0",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.5.2",
     "gulp-jasmine": "^2.0.0",
