--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "angular-mocks": "^1.3.14",
+    "babelify": "^6.0.2",
     "browserify": "^8.1.3",
     "browserify-shim": "^3.8.3",
     "connect-livereload": "^0.5.3",
@@ -33,6 +34,7 @@
     "jasmine-core": "^2.2.0",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.31",
+    "karma-browserify": "^4.1.2",
     "karma-chrome-launcher": "^0.1.7",
     "karma-cli": "0.0.4",
     "karma-jasmine": "^0.3.5",
